# Shape_server

./: README.md  funcProj.cabal
.stack-work/install/x86_64-osx/lts-7.9/8.0.1/flag-cache/: aeson-0.11.2.1-5ZQWuTFmffALcfpzDCXoOz  aeson-pretty-0.8.2-FONEppYcAcNL67yNmD5AQ1  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0  async-2.1.0-J6Pl8k3L4PKGEpjYdgwiIf  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  blaze-html-0.8.1.2-2kD96kJB6JEGow1dP8IL6C  blaze-markup-0.7.1.0-5a5pBG0fO8kJX4ke3K7j3D  blaze-svg-0.3.6-KnzXaminLUoIWcRwpCsUT  byteorder-1.0.4-BbL4c17EpZrL9PcZm0xys9  bytestring-builder-0.10.8.1.0-4GkSrJiY0n01lBdCh7onK  case-insensitive-1.2.0.7-FlqweN7AuKj9EdU2arVEt4  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  cookie-0.4.2.1-2a2c54yIyBn79Ul3iLWclJ  data-default-class-0.1.2.0-FYQpjIylblBDctdkHAFeXA  dlist-0.8.0.2-GWAMmbX9rLg3tqrbOizHGv  easy-file-0.2.1-bAUkz2rC2kFhBbPjw2Of5  exceptions-0.8.3-7py7fmRxowDFpHmiHGKrTb  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  fast-logger-2.4.7-E7H6TuZQzia59KuB50vayl  funcProj-0.1.0.0-7s6aX0jPQkMFnqGLbVy140  funcProj-0.1.0.0-JQdekoheVmeDGWG2aPkxTf  hashable-1.2.4.0-EMu4H7FB10MAl6hwKw992G  hex-0.1.2-5b29FECtEYw7JOQYzG1Un6  http-date-0.0.6.1-150spKQYCuoIrltdbMmYGs  http-types-0.9.1-8WdUZL4twHzANJbxvb1Aoj  http2-1.6.2-FAbjmjQAybhLjdn6FTjXH8  iproute-1.7.1-9hsGfRvggCmFA0ueZi5Sd9  (+39 more)
app/: Main.hs
src/: Shapes.hs  Site.hs  enter.html
(+8 files in other folders)
