name:                funcProj
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/funcProj#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Shapes, Site
  build-depends:       base >= 4.7 && < 5,
                       blaze-html >= 0.8 && < 0.9,
                       blaze-svg >= 0.3 && < 0.4,
                       scotty >= 0.11 && < 0.12,
                       text >= 1.2 && < 1.3
  default-language:    Haskell2010

executable funcProj-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, funcProj
  default-language:    Haskell2010

test-suite funcProj-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , funcProj
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/funcProj
